# Arcade

./: .gitignore  ADisplay_8cpp.html  ADisplay_8hpp.html  ADisplay_8hpp_source.html  AGame_8cpp.html  AGame_8hpp.html  AGame_8hpp_source.html  CMakeLists.txt  CNAME  Core_8cpp.html  Core_8hpp.html  Core_8hpp_source.html  Doxyfile  EmergencyMenu_8cpp.html  EmergencyMenu_8hpp.html  EmergencyMenu_8hpp_source.html  IDisplay_8hpp.html  IDisplay_8hpp_source.html  IGame_8hpp.html  IGame_8hpp_source.html  IType_8hpp.html  IType_8hpp_source.html  Idatas_8hpp.html  Idatas_8hpp_source.html  LICENSE  LibGetter_8cpp.html  LibGetter_8hpp.html  LibGetter_8hpp_source.html  LibLoader_8cpp.html  LibLoader_8hpp.html  LibLoader_8hpp_source.html  Makefile  Menu_8cpp.html  Menu_8hpp.html  Menu_8hpp_source.html  Minesweeper_8cpp.html  Minesweeper_8hpp.html  Minesweeper_8hpp_source.html  Ncurses_8cpp.html  Ncurses_8hpp.html  (+206 more)
.github/workflows/: chocolatine.yml  doxygen-gh-pages.yml
docs/: core_architecture.md  display_interface.md  file_structure.md  game_interface.md
score/: score_Snake.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_d.js  defines_0.js  defines_3.js  defines_4.js  defines_5.js  defines_9.js  defines_a.js  defines_b.js  (+55 more)
src/: main.cpp
(+350 files in other folders)
